게시글 상세페이지 신규 생성 및 댓글 기능 추가